# open-super-whisper

./: .env.example  .gitignore  OpenSuperWhisper.spec  README.ja.md  README.md  main.py  pyproject.toml  todo.md
config/: default_config.json
src/: main.py
src/core/: audio_recorder.py  hotkeys.py  instruction_sets.py  whisper_api.py
src/gui/: __init__.py  config.py  labels.py  main.py  main_window.py  styles.py
src/gui/components/dialogs/: __init__.py  api_key_dialog.py  hotkey_dialog.py  instruction_sets_dialog.py  simple_input_dialog.py  simple_message_dialog.py  system_instructions_dialog.py  vocabulary_dialog.py
src/gui/components/widgets/: status_indicator.py
src/gui/dialogs/: __init__.py  api_key_dialog.py  hotkey_dialog.py  system_instructions_dialog.py  vocabulary_dialog.py
src/gui/resources/: config.py  labels.py  styles.py
src/gui/widgets/: __init__.py  status_indicator.py
src/gui/windows/: main_window.py
src/util/: settings.py
