[project]
name = "open-super-whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keyboard>=0.13.5",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pyaudio>=0.2.13",
    "pydub>=0.25.1",
    "pyinstaller>=6.13.0",
    "pyperclip>=1.8.2",
    "pyqt6>=6.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "speechrecognition>=3.10.0",
    "tqdm>=4.66.0",
]
