[project]
name = "open-super-whisper"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pynput>=1.7.6",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pyinstaller>=6.13.0",
    "pyqt6>=6.5.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
]
